--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^7.6.3",
     "@storybook/addon-essentials": "7.6.3",
     "@storybook/addon-interactions": "7.6.3",
     "@storybook/addon-links": "7.6.3",
-    "@storybook/addon-onboarding": "1.0.9",
     "@storybook/blocks": "7.6.3",
     "@storybook/react": "7.6.3",
     "@storybook/react-vite": "7.6.3",
     "@storybook/test": "7.6.3",
+    "@storybook/theming": "^7.6.3",
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -51,6 +52,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "7.6.3",
+    "storybook-dark-mode": "^3.0.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
