--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.6.4",
     "@storybook/addon-docs": "^7.6.3",
     "@storybook/addon-essentials": "7.6.3",
     "@storybook/addon-interactions": "7.6.3",
     "@storybook/addon-links": "7.6.3",
+    "@storybook/addon-storysource": "^7.6.4",
     "@storybook/blocks": "7.6.3",
+    "@storybook/manager-api": "^7.6.4",
     "@storybook/react": "7.6.3",
     "@storybook/react-vite": "7.6.3",
     "@storybook/test": "7.6.3",
