--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@natsuneko-laboratory/ui",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/ui.js",
-      "types": "./dist/ui.d.ts"
+      "import": "./dist/index.es.js",
+      "types": "./src/main.ts"
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "dev": "vite",
@@ -65,5 +65,8 @@
     "react-dom": "^18.2.0"
   },
   "readme": "ERROR: No README data found!",
-  "_id": "@natsuneko-laboratory/ui@0.0.0"
+  "_id": "@natsuneko-laboratory/ui@0.0.0",
+  "publishConfig": {
+    "access": "public"
+  }
 }
