--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@natsuneko-laboratory/ui",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "type": "module",
   "exports": {
     ".": {
       "import": "./dist/main.es.js",
       "require": "./dist/main.cjs.cjs",
       "types": "./dist/main.d.ts"
+    },
+    "./data/table": {
+      "import": "./dist/data/table/index.es.js",
+      "require": "./dist/data/table/index.cjs.cjs",
+      "types": "./dist/data/table/index.d.ts"
     },
     "./forms/button": {
       "import": "./dist/forms/button/index.es.js",
@@ -28,6 +33,11 @@
       "require": "./dist/layout/center/index.cjs.cjs",
       "types": "./dist/layout/center/index.d.ts"
     },
+    "./layout/cluster": {
+      "import": "./dist/layout/cluster/index.es.js",
+      "require": "./dist/layout/cluster/index.cjs.cjs",
+      "types": "./dist/layout/cluster/index.d.ts"
+    },
     "./layout/container": {
       "import": "./dist/layout/container/index.es.js",
       "require": "./dist/layout/container/index.cjs.cjs",
@@ -37,6 +47,11 @@
       "import": "./dist/layout/section/index.es.js",
       "require": "./dist/layout/section/index.cjs.cjs",
       "types": "./dist/layout/section/index.d.ts"
+    },
+    "./layout/stack": {
+      "import": "./dist/layout/stack/index.es.js",
+      "require": "./dist/layout/stack/index.cjs.cjs",
+      "types": "./dist/layout/stack/index.d.ts"
     },
     "./media/logo": {
       "import": "./dist/media/logo/index.es.js",
@@ -78,6 +93,11 @@
       "require": "./dist/navigations/hyperlink/index.cjs.cjs",
       "types": "./dist/navigations/hyperlink/index.d.ts"
     },
+    "./navigations/link-button": {
+      "import": "./dist/navigations/link-button/index.es.js",
+      "require": "./dist/navigations/link-button/index.cjs.cjs",
+      "types": "./dist/navigations/link-button/index.d.ts"
+    },
     "./templates/footer": {
       "import": "./dist/templates/footer/index.es.js",
       "require": "./dist/templates/footer/index.cjs.cjs",
@@ -87,6 +107,11 @@
       "import": "./dist/templates/header/index.es.js",
       "require": "./dist/templates/header/index.cjs.cjs",
       "types": "./dist/templates/header/index.d.ts"
+    },
+    "./typography/blockquote": {
+      "import": "./dist/typography/blockquote/index.es.js",
+      "require": "./dist/typography/blockquote/index.cjs.cjs",
+      "types": "./dist/typography/blockquote/index.d.ts"
     },
     "./typography/headings": {
       "import": "./dist/typography/headings/index.es.js",
