--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-storybook": "^0.6.15",
     "fast-glob": "^3.3.2",
+    "next": "^14.0.4",
     "normalize-path": "^3.0.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
@@ -65,6 +66,7 @@
     "vite": "^5.0.0"
   },
   "peerDependencies": {
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
