--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^7.6.19",
-    "@storybook/addon-docs": "^7.6.19",
-    "@storybook/addon-essentials": "7.6.6",
-    "@storybook/addon-interactions": "7.6.6",
-    "@storybook/addon-links": "7.6.6",
-    "@storybook/addon-storysource": "^7.6.19",
-    "@storybook/blocks": "7.6.6",
-    "@storybook/manager-api": "^7.6.19",
-    "@storybook/react": "7.6.6",
-    "@storybook/react-vite": "7.6.6",
-    "@storybook/test": "7.6.6",
-    "@storybook/theming": "^7.6.19",
+    "@storybook/addon-a11y": "^8.1.3",
+    "@storybook/addon-docs": "^8.1.3",
+    "@storybook/addon-essentials": "^8.1.3",
+    "@storybook/addon-interactions": "^8.1.3",
+    "@storybook/addon-links": "^8.1.3",
+    "@storybook/addon-storysource": "^8.1.3",
+    "@storybook/blocks": "^8.1.3",
+    "@storybook/manager-api": "^8.1.3",
+    "@storybook/react": "^8.1.3",
+    "@storybook/react-vite": "^8.1.3",
+    "@storybook/test": "^8.1.3",
+    "@storybook/theming": "^8.1.3",
     "@types/node": "^20.10.3",
     "@types/normalize-path": "^3.0.2",
     "@types/react": "^18.2.37",
@@ -59,7 +59,7 @@
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "7.6.6",
+    "storybook": "^8.1.3",
     "storybook-dark-mode": "^3.0.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
