--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.19",
     "chromatic": "^11.4.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -55,20 +55,21 @@
     "fast-glob": "^3.3.2",
     "next": "^14.0.4",
     "normalize-path": "^3.0.0",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^8.1.3",
     "storybook-dark-mode": "^4.0.1",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "vite": "^5.0.0"
   },
   "peerDependencies": {
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4"
   },
   "readme": "ERROR: No README data found!",
   "publishConfig": {
