--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^20.10.3",
     "@types/normalize-path": "^3.0.2",
     "@types/react": "^18.2.37",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -58,7 +59,9 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "shiki": "^1.12.0",
     "storybook": "^8.1.3",
     "storybook-dark-mode": "^4.0.1",
     "tailwindcss": "^3.4.4",
@@ -68,7 +71,9 @@
   "peerDependencies": {
     "next": "^14.0.4",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "shiki": "^1.12.0",
     "tailwindcss": "^3.4.4"
   },
   "readme": "ERROR: No README data found!",
